--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
    <header>
     <nav>
         <div class="logo">
-            <a href="Home.html">
+            <a href="index.html">
                 <img src="Imagen/logo.png"  alt="Logo de la empresa">
             </a>
         </div>
         <div class="menu">
-            <a href="Home.html">Página Principal</a>
+            <a href="index.html">Página Principal</a>
             <a href="Nosotros.html">Quiénes Somos</a>
             <a href="Servicios.html">Servicios</a>
             <a href="Contatos.html">Contacto</a>
@@ -68,3 +68,4 @@
     <script src="JavaHome.js"></script>
 </body>
 </html>
+
