--- a/Servicios.html
+++ b/Servicios.html
@@ -11,12 +11,12 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="Home.html">
+                <a href="index.html">
                     <img src="Imagen/logo.png" alt="Logo de la empresa">
                 </a>
             </div>
             <div class="menu">
-                <a href="Home.html">Página Principal</a>
+                <a href="index.html">Página Principal</a>
                 <a href="Nosotros.html">Quiénes Somos</a>
                 <a href="Servicios.html" class="activo">Servicios</a>
                 <a href="Contatos.html">Contacto</a>
